--- a/packages/react-bmw-demo/package.json
+++ b/packages/react-bmw-demo/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "react-bmw",
+  "name": "react-bmw-demo",
   "version": "1.0.0-alpha.0",
-  "description": "A React RHMI renderer",
-  "main": "src/index.ts",
+  "description": "A BMW React package for running and rendering apps on the iDrive",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "react-reconciler": "^0.21.0"
+    "react-bmw": "1.0.0-alpha.0"
   }
 }
