--- a/packages/react-bmw/package.json
+++ b/packages/react-bmw/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@types/react": "^16.9.2",
+    "@types/react-reconciler": "^0.18.0",
     "react-reconciler": "^0.21.0"
   }
 }
