Changes coming again haha

--- a/packages/react-bmw/package.json
+++ b/packages/react-bmw/package.json
@@ -2,10 +2,12 @@
   "name": "react-bmw",
   "version": "1.0.0-alpha.0",
   "description": "A React RHMI renderer",
-  "main": "src/index.ts",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc --declaration",
+    "watch": "tsc -w --declaration"
   },
+  "types": "dist/index.d.ts",
   "author": "",
   "license": "MIT",
   "dependencies": {
