use commonjs as it is the only one supported

--- a/packages/react-bmw/package.json
+++ b/packages/react-bmw/package.json
@@ -2,18 +2,18 @@
   "name": "react-bmw",
   "version": "1.0.0-alpha.0",
   "description": "A React RHMI renderer",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prepare": "tsc src/index.ts --outFile index.js --lib 'ES2015' --esModuleInterop --module 'system' --moduleResolution 'node'"
+    "prepare": "tsc src/index.ts --lib 'ES2015' --esModuleInterop --module 'commonjs' --moduleResolution 'node'"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
     "@types/react": "^16.9.2",
     "@types/react-reconciler": "^0.18.0",
+    "react": "^16.9.0",
     "react-reconciler": "^0.21.0"
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
