--- a/packages/react-bmw-browser-demo/package.json
+++ b/packages/react-bmw-browser-demo/package.json
@@ -3,13 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "24.0.18",
-    "@types/node": "12.7.5",
-    "@types/react": "16.9.2",
-    "@types/react-dom": "16.9.0",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0",
     "react-bmw": "1.0.0-alpha.0",
+    "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
     "typescript": "3.6.3"
   },
@@ -17,7 +13,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "buildUI": "babel ./src src --out-dir build --extensions '.js,.ts,.tsx' --ignore '**/__tests__/**' && node build/index.js"
   },
   "browserslist": {
     "production": [
@@ -30,5 +27,18 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.6.0",
+    "@babel/preset-env": "^7.6.0",
+    "@babel/cli": "^7.6.0",
+    "@babel/node": "^7.6.1",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-transform-react-jsx": "^7.3.0",
+    "@babel/preset-typescript": "^7.6.0",
+    "@types/jest": "24.0.18",
+    "@types/node": "12.7.5",
+    "@types/react": "16.9.2",
+    "@types/react-dom": "16.9.0"
   }
 }
