--- a/packages/react-bmw-browser-demo/package.json
+++ b/packages/react-bmw-browser-demo/package.json
@@ -14,7 +14,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "buildUI": "babel ./src src --out-dir build --extensions '.js,.ts,.tsx' --ignore '**/__tests__/**' && GENERATE_UI=true  node build/index.js"
+    "buildUI": "babel ./src --out-dir build --extensions '.js,.ts,.tsx' --ignore '**/__tests__/**' && GENERATE_UI=true node build/index.js"
   },
   "browserslist": {
     "production": [
