Update package name and rewrite things in UIManager

--- a/packages/react-bmw/package.json
+++ b/packages/react-bmw/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-bmw",
+  "name": "@grabbou/react-bmw",
   "version": "1.0.0-alpha.1",
   "description": "A React RHMI renderer",
   "main": "dist/index.js",
