Fix some runtime errors and use .web for our support

--- a/packages/react-bmw-browser-demo/package.json
+++ b/packages/react-bmw-browser-demo/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@grabbou/react-bmw": "^1.0.0-alpha.0",
+    "react-bmw": "^1.0.0-alpha.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
