--- a/package.json
+++ b/package.json
@@ -1,26 +1,34 @@
 {
-	"private": true,
-	"workspaces": [
-		"packages/*"
-	],
-	"devDependencies": {
-		"@callstack/eslint-config": "^7.0.0",
-		"eslint": "^6.3.0"
+  "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
+  "devDependencies": {
+    "@callstack/eslint-config": "^7.0.0",
+    "eslint": "^6.3.0"
   },
   "scripts": {
     "lint": "yarn eslint --ext '.js,.ts' ./packages/react-*"
   },
   "dependencies": {
-		"@typescript-eslint/eslint-plugin": "^2.2.0",
-		"@typescript-eslint/parser": "^2.2.0",
-		"typescript": "^3.6.3"
-	},
+    "@typescript-eslint/eslint-plugin": "^2.2.0",
+    "@typescript-eslint/parser": "^2.2.0",
+    "typescript": "^3.6.3"
+  },
   "eslintConfig": {
     "extends": "@callstack",
+    "rules": {
+      "react-native/no-raw-text": 0
+    },
     "settings": {
       "import/resolver": {
         "node": {
-          "extensions": [".js", ".jsx", ".ts", ".tsx"]
+          "extensions": [
+            ".js",
+            ".jsx",
+            ".ts",
+            ".tsx"
+          ]
         }
       }
     }
