--- a/packages/react-bmw/package.json
+++ b/packages/react-bmw/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "path": "^0.12.7",
+    "react-dom": "^16.9.0",
     "react-reconciler": "^0.21.0",
     "uuid": "^3.3.3",
     "xmlbuilder": "^13.0.2"
